conectando front-end e back-end

--- a/front-end/home/index.html
+++ b/front-end/home/index.html
@@ -94,6 +94,7 @@
     </footer>
 
     <!-- JavaScript -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
