--- a/front-end/portal/lista-lidos.html
+++ b/front-end/portal/lista-lidos.html
@@ -136,6 +136,7 @@
   </footer>
   
     <!-- JS -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
