--- a/front-end/home/login.html
+++ b/front-end/home/login.html
@@ -40,7 +40,7 @@
                 <form class="form-signin" onsubmit="">
                     <input id="inputEmail" name="inputEmail" class="form-control" placeholder="Email" required autofocus>
                     <br>
-                    <input id="inputSenha" name="inputSenha" class="form-control" placeholder="Senha" required>
+                    <input id="inputSenha" name="inputSenha" class="form-control" placeholder="Senha" required type="password">
                 </form>
                 <button type="submit" class="btn btn-lg btn-info btn-block" onclick="login()">Entrar</button>
             </div>
@@ -61,6 +61,7 @@
     </footer>
 
     <!-- JS -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
