--- a/front-end/portal/livros.html
+++ b/front-end/portal/livros.html
@@ -161,6 +161,7 @@
   </footer>
   
     <!-- JS -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
