--- a/front-end/home/login.html
+++ b/front-end/home/login.html
@@ -38,7 +38,7 @@
             <h2>Login</h2>
             <div class="login-form">
                 <form class="form-signin" onsubmit="">
-                    <input id="inputEmail" name="inputEmail" class="form-control" placeholder="Email" required autofocus>
+                    <input id="inputEmail" name="inputEmail" class="form-control" placeholder="E-mail" required autofocus>
                     <br>
                     <input id="inputSenha" name="inputSenha" class="form-control" placeholder="Senha" required type="password">
                 </form>
