--- a/front-end/portal/perfil.html
+++ b/front-end/portal/perfil.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body onload="getPerfil()">
+<body onload="getPerfil(), getAvaliacoes()">
 
     <header id="menu-portal-resumo">
 
@@ -73,18 +73,14 @@
                         <img id="foto-perfil" src="../assets/images/foto-perfil.png" alt="foto-de-perfil">
                     </div>
                     <div id="dados-perfil">
+                        <h3>
+                            <strong id="nome-exibicao" name="nome-exibicao"></strong>
+                        </h3>
                         <h5>
-                            <strong id="nome-exibicao" name="nome-exibicao">Nome de Exibição</strong>
+                            <span>@</span><span id="nome-usuario" name="nome-usuario"></span>
                         </h5>
-                        <h6>
-                            <strong>
-                                <span>@</span><span id="nome-usuario" name="nome-usuario">usuario</span>
-                            </strong>
-                        </h6>
-                        <p id="biografia" name="biografia">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a quam quis odio
-                            sodales semper ut eu mi. Quisque id odio laoreet urna commodo porta. Nullam at vulputate velit. Aliquam ut felis gravida, scelerisque enim in, dignissim elit.
-                        </p>
+                        <h6>Biografia:</h6>
+                        <em><p id="biografia" name="biografia" style="font-size: large;"></p></em>
                         <p>
                             <a href="#">Editar Perfil</a>
                         </p>
@@ -174,31 +170,8 @@
                                 <th scope="col" style="width: 30%">Avaliação</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>5 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>4 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
-                            </tr>
+                        <tbody id="conteudo-avaliacoes">
+                            
                         </tbody>
                     </table>
                 </div>
