atualizando 'para-ler'

--- a/front-end/portal/lista-para-ler.html
+++ b/front-end/portal/lista-para-ler.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body>
+<body style="overflow: auto;">
 
     <header id="menu-portal-resumo">
 
@@ -88,18 +88,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">1</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>700</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Atualizar Status</a></td>
-                            </tr>
-                            <tr>
-                            <th scope="row">2</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>650</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Atualizar Status</a></td>
+                                <td colspan="5">Lista Vazia. Adicione livros.</td>
                             </tr>
                         </tbody>
                     </table>
