atualizando lista 'para-ler'

--- a/front-end/home/index.html
+++ b/front-end/home/index.html
@@ -47,7 +47,7 @@
                 <div class="container">
                     <h1 class="display-2">Registre suas leituras</h1>
                     <p class="lead pt-4">Adicione livros que já leu, está lendo ou pretende ler.</p>
-                    <p class="pt-4"><a class="btn btn-info btn-lg" href="index.html#features-home" role="button">Saiba mais &raquo;</a></p>
+                    <p class="pt-4"><a class="btn btn-info btn-lg" href="index.html#features-titulo" role="button">Saiba mais &raquo;</a></p>
                 </div>
                 
         </section>
@@ -55,7 +55,7 @@
         <section class="d-flex" id="features-home">
 
             <div class="container">
-                <h1 class="text-center display-4">
+                <h1 class="text-center display-4" id="features-titulo">
                     <strong>Funcionalidades</strong>
                 </h1>
                 <br><br><br>
@@ -83,15 +83,11 @@
             
         </section>
 
+        <footer class="footer">
+            <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
+        </footer>
+
     </main>
-
-    <footer class="footer">
-
-        <div class="container">
-          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
-        </div>
-
-    </footer>
 
     <!-- JavaScript -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
