--- a/front-end/home/login.html
+++ b/front-end/home/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body class="body-overflow">
+<body>
 
     <header class="menu" id="menu-login">
 
@@ -34,7 +34,7 @@
 
     <main>        
         
-        <section class="text-center h-100" id="main-login">
+        <section class="text-center" id="main-login">
             <h2>Login</h2>
             <div class="login-form">
                 <form class="form-signin" onsubmit="">
@@ -50,15 +50,11 @@
             </button>
         </section>
 
+        <footer class="footer">
+            <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
+        </footer>
+
     </main>
-
-    <footer class="footer">
-
-        <div class="container">
-          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
-        </div>
-
-    </footer>
 
     <!-- JS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
