--- a/front-end/portal/index.html
+++ b/front-end/portal/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body class="body-overflow" onload="getResumo()">
+<body onload="getResumo()">
 
     <header id="menu-portal-resumo">
 
