--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -67,7 +67,7 @@
 
     <main>
         <section id="lista-lendo-agora-header">
-            <div class="container text-center py-4">
+            <div class="container text-center pt-4">
                 <div class="d-flex justify-content-between">
                     <h1>Lendo Agora</h1>
                     <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href='livros.html';">
@@ -75,7 +75,7 @@
                     </button>
                 </div>
                 <br>
-                <div class="row pb-5">
+                <div class="row pb-3">
                     <table class="table table-striped table-light" style="font-size: large;">
                         <thead class="thead-dark">
                             <tr>
@@ -106,15 +106,12 @@
                 </div>
             </div>
         </section>
+
+        <footer class="footer">
+            <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
+        </footer>
+
     </main>
-
-  <footer class="footer">
-
-        <div class="container">
-          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
-        </div>
-
-  </footer>
   
     <!-- JS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
