--- a/front-end/portal/lista-para-ler.html
+++ b/front-end/portal/lista-para-ler.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body style="overflow: auto;">
+<body onload="getListaParaLer()">
 
     <header id="menu-portal-resumo">
 
@@ -67,7 +67,7 @@
 
     <main>
         <section id="lista-para-ler-header">
-            <div class="container text-center py-4">
+            <div class="container text-center pt-4">
                 <div class="d-flex justify-content-between">
                     <h1>Para Ler</h1>
                     <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href='livros.html';">
@@ -75,7 +75,7 @@
                     </button>
                 </div>
                 <br>
-                <div class="row pb-5">
+                <div class="row pb-3">
                     <table class="table table-striped table-light" style="font-size: large;">
                         <thead class="thead-dark">
                             <tr>
@@ -86,24 +86,28 @@
                                 <th scope="col" style="width: 25%">Opção</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td colspan="5">Lista Vazia. Adicione livros.</td>
-                            </tr>
-                        </tbody>
+                        <tbody id="lista-para-ler-conteudo">
+                            
+                            
+                        </tbody>    
                     </table>
                 </div>
             </div>
         </section>
+
+        <footer class="footer">
+            <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
+        </footer>
+
     </main>
 
-  <footer class="footer">
+    <!-- <footer class="footer">
 
         <div class="container">
           <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
         </div>
 
-  </footer>
+    </footer> -->
   
     <!-- JS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
