--- a/front-end/portal/livros.html
+++ b/front-end/portal/livros.html
@@ -66,7 +66,7 @@
     </header>
 
     <main>
-        <section id="lista-lendo-agora-header">
+        <section id="lista-livros">
             <div class="container text-center py-4">
                 <h1>Livros</h1>
                 <br>
@@ -150,15 +150,12 @@
                 </div>
             </div>
         </section>
+
+        <footer class="footer">
+            <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
+        </footer>
+
     </main>
-
-  <footer class="footer">
-
-        <div class="container">
-          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
-        </div>
-
-  </footer>
   
     <!-- JS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
