--- a/front-end/portal/livros.html
+++ b/front-end/portal/livros.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body>
+<body onload="getLivrosNovos(), setTituloNovosLivros()">
 
     <header id="menu-portal-resumo">
 
@@ -66,9 +66,9 @@
     </header>
 
     <main>
-        <section id="lista-livros">
+        <section id="lista-livros-novos">
             <div class="container text-center py-4">
-                <h1>Livros</h1>
+                <h1 id="titulo-novos-livros"></h1>
                 <br>
                 <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
@@ -84,67 +84,8 @@
                                 <th scope="col" style="width: 20%">Opção</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">5</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">6</th>
-                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
-                                <td>Livro</td>
-                                <td>Autor</td>
-                                <td>Páginas</td>
-                                <td>Ano</td>
-                                <td>Gênero</td>
-                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
-                            </tr>
+                        <tbody id="lista-livros-novos-conteudo">
+                            
                         </tbody>
                     </table>
                 </div>
