--- a/front-end/portal/add-para-ler.html
+++ b/front-end/portal/add-para-ler.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Para Ler - Shelf</title>
+    <title>Lista de Livros - Shelf</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
-  <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
-  <link rel="stylesheet" href="..\assets\css\style.css">
+    <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
+    <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body onload="getListaParaLer()">
+<body onload="getLivrosNovos(1)">
 
     <header id="menu-portal-resumo">
 
@@ -66,47 +66,74 @@
     </header>
 
     <main>
-        <section id="lista-para-ler-header">
-            <div class="container text-center pt-4">
-                <div class="d-flex justify-content-between">
-                    <h1>Para Ler</h1>
-                    <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href = 'add-para-ler.html'">
-                        Adicionar Livro
-                    </button>
-                </div>
+        <section id="lista-livros-novos">
+            <div class="container text-center py-4">
+                <h1>Adicione Livros em 'Para Ler'</h1>
                 <br>
-                <div class="row pb-3">
+                <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
                         <thead class="thead-dark">
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Capa</th>
-                                <th scope="col" style="width: 20%">Nome</th>
-                                <th scope="col" style="width: 25%">Páginas</th>
-                                <th scope="col" style="width: 25%">Opção</th>
+                                <th scope="col" style="width: 15%">Nome</th>
+                                <th scope="col" style="width: 15%">Autor</th>
+                                <th scope="col" style="width: 10%">Total de Páginas</th>
+                                <th scope="col" style="width: 10%">Ano de Lançamento</th>
+                                <th scope="col" style="width: 15%">Gênero</th>
+                                <th scope="col" style="width: 20%">Opção</th>
                             </tr>
                         </thead>
-                        <tbody id="lista-para-ler-conteudo">
+                        <tbody id="lista-livros-novos-conteudo">
                             
-                        </tbody>    
+                        </tbody>
                     </table>
                 </div>
             </div>
         </section>
+
+        <!-- Modal -->
+			<div id="modalLista1" class="modal fade">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<!-- título -->
+						<div class="modal-header">
+							<h4 class="modal-title"></h4>
+							<button class="close" data-dismiss="modal" arial-label="Fechar">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<!-- conteúdo -->
+						<div class="modal-body">
+							<div class="row">
+								<div class="col-4">
+									<span>Nome do Livro: </span>
+								</div>
+								<div class="col-8">
+									<input type="text" id="nomeLivro" class="form-control" readonly>
+								</div>							
+                            </div>
+                            <br>
+                            <div class="container">
+                                <div class="row justify-content-center">
+									<button class="btn btn-primary" data-dismiss="modal">Confirmar</button>	
+								</div>
+                            </div>
+                        </div>
+
+						<!-- rodapé -->
+						<div class="modal-footer">
+							<button class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+						</div>
+					</div>
+				</div>
+			</div>
 
         <footer class="footer">
             <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
         </footer>
 
     </main>
-
-    <!-- <footer class="footer">
-
-        <div class="container">
-          <span>© Copyright 2020 Shell na Terra. Todos direitos reservados.</span>
-        </div>
-
-    </footer> -->
   
     <!-- JS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
