--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -70,7 +70,7 @@
             <div class="container text-center pt-4">
                 <div class="d-flex justify-content-between">
                     <h1>Lendo Agora</h1>
-                    <button type="button" class="btn btn-lg btn-dark" onclick="guardaListaAdd(2)">
+                    <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href = 'add-lendo-agora.html'">
                         Adicionar Livro
                     </button>
                 </div>
