--- a/front-end/portal/add-para-ler.html
+++ b/front-end/portal/add-para-ler.html
@@ -140,6 +140,18 @@
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
+    <script type="text/javascript">
+        $('#modalLista1').on('show.bs.modal', function(event) {
+            var button = $(event.relatedTarget);
+            
+            var idLivro = button.data('id');
+
+            var modal = $(this);
+            
+            modal.find('.modal-title').text("Adicionar Livro '"+idLivro+"'");
+            modal.find('.modal-body #nomeLivro').val(idLivro);
+        });
+    </script>
 
 </body>
 
