--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -83,7 +83,7 @@
                                 <th scope="col">Capa</th>
                                 <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col" style="width: 25%">Tempo Lendo até Agora</th>
-                                <th scope="col" style="width: 25%">Opção</th>
+                                <th scope="col" style="width: 25%" colspan="2">Opção</th>
                             </tr>
                         </thead>
                         <tbody id="lista-lendo-agora-conteudo">
