--- a/front-end/portal/lista-para-ler.html
+++ b/front-end/portal/lista-para-ler.html
@@ -83,7 +83,7 @@
                                 <th scope="col">Capa</th>
                                 <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col" style="width: 25%">Páginas</th>
-                                <th scope="col" style="width: 25%">Opção</th>
+                                <th scope="col" style="width: 25%" colspan="2">Opções</th>
                             </tr>
                         </thead>
                         <tbody id="lista-para-ler-conteudo">
