--- a/front-end/portal/lista-lidos.html
+++ b/front-end/portal/lista-lidos.html
@@ -85,6 +85,7 @@
                                 <th scope="col" style="width: 20%">Tempo De Leitura</th>
                                 <th scope="col" style="width: 15%">Páginas</th>
                                 <th scope="col" style="width: 15%">Avaliação</th>
+                                <th scope="col" style="width: 15%">Opção</th>
                             </tr>
                         </thead>
                         <tbody id="lista-lidos-conteudo">
