--- a/front-end/home/index.html
+++ b/front-end/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
