add patch livros e avaliacoes

--- a/front-end/home/login.html
+++ b/front-end/home/login.html
@@ -37,12 +37,12 @@
         <section class="text-center" id="main-login">
             <h2>Login</h2>
             <div class="login-form">
-                <form class="form-signin" onsubmit="">
+                <form class="form-signin" onsubmit="return enterLogin(event)">
                     <input id="inputEmail" name="inputEmail" class="form-control" placeholder="E-mail" required autofocus onkeypress="return enterLogin(event)">
                     <br>
                     <input id="inputSenha" name="inputSenha" class="form-control" placeholder="Senha" required type="password" onkeypress="return enterLogin(event)">
+                    <button type="submit" class="btn btn-lg btn-info btn-block" onclick="login()">Entrar</button>
                 </form>
-                <button type="submit" class="btn btn-lg btn-info btn-block" onclick="login()">Entrar</button>
             </div>
             <p>Não tem conta?</p>
             <button type="button" class="btn btn-secondary">
